Fixed header spacing issues

--- a/Project Dragons Lair Gaming.css
+++ b/Project Dragons Lair Gaming.css
@@ -35,8 +35,6 @@ section.row img {
   display: none;
   margin-left: auto;
   margin-right: auto;
-  width: 1500px;
-  height: 1500px;
 }
 
 #mySlidesFirst {
